--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "firebase": "^9.23.0",
+    "firebase-admin": "^11.9.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1"
