--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.3.0",
+        "firebase": "^9.23.0",
         "jquery": "^3.6.3",
         "popper.js": "^1.16.1",
         "react": "^18.2.0",
