Added Signup by Phone

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
         "popper.js": "^1.16.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.45.1",
         "react-infinite-scroll-component": "^6.1.0",
+        "react-otp-input": "^3.0.2",
+        "react-phone-input-2": "^2.15.1",
         "react-router-dom": "^6.13.0",
         "react-scripts": "5.0.1",
+        "react-step-builder": "^3.0.6",
         "react-toastify": "^9.1.1",
         "sass": "^1.63.5",
         "web-vitals": "^2.1.4"
